<resources>
    <string name="required">required</string>
    <string name="app_name">cleanenv</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_track">Track Order</string>
    <string name="menu_gallery">Order History</string>
    <string name="menu_slideshow">Settings</string>
    <string name="menu_Aboutus">About us</string>
    <string name="menu_ContactUs">Contact us</string>

    //item prices galsses - 1.5 Rs/kg. paper / iron / steel 23 Rs/kg. boxes 8Rs / ps.
    <string name="paper_iron_steel">20 - 25 Rs/kg</string>
    <string name="galsses">1 - 3 Rs/kg</string>
    <string name="Boxes">8 Rs/Ps</string>
    <string name="title_activity_main_emp">MainActivityEmp</string>
</resources>