<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cleanenv.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_trackOrder"
            app:destination="@id/nav_trackOrder" />
    </fragment>
    <fragment
        android:id="@+id/nav_trackOrder"
        android:name="com.example.cleanenv.ui.Track.trackOrder"
        android:label="@string/menu_track"
        tools:layout="@layout/fragment_track_order" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cleanenv.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cleanenv.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_aboutUs"
            app:destination="@id/nav_aboutUs" />
    </fragment>
    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.example.cleanenv.ui.aboutUs.AboutUs"
        android:label="@string/menu_Aboutus"
        tools:layout="@layout/fragment_about_us" >
        <action
            android:id="@+id/action_nav_aboutUs_to_nav_contactUs"
            app:destination="@id/nav_contactUs" />
    </fragment>
    <fragment
        android:id="@+id/nav_contactUs"
        android:name="com.example.cleanenv.ui.contactUs.ContactUs"
        android:label="@string/menu_ContactUs"
        tools:layout="@layout/fragment_contact_us" />
</navigation>